Improved logging and response middleware / login endpoint / etc - Updated eslint rules - Added UUID's to requests - Added UUID to logs - Added UUID to internal sever error responses - Refined validation to check for value types - Refined the response middleware to intercept more error messages - Refined the logging system to behave differently on dev / prod - Created a login system so users can now login and recieve a token - Created new models for user devices and roles - Added config boolean to switch between full and concise error logging

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,8 +15,10 @@
         "no-plusplus": [ 2, { "allowForLoopAfterthoughts": true }],
         "no-param-reassign": 0,
         "no-nested-ternary": 0,
-        "no-unused-vars": 1,
+        "no-unused-vars": [1, { "argsIgnorePattern": "next" }],
         "no-multiple-empty-lines": [2, { "max": 1, "maxBOF": 0, "maxEOF": 1 }],
+        "no-unused-expressions": [2, { "allowTernary": true }],
+        "no-warning-comments": [1, { "terms": ["TODO"], "location": "start" }],
         "object-curly-newline": [2, {
             "ObjectExpression": { "consistent": true },
             "ObjectPattern": { "consistent": true },
