--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
         "body-parser": "^1.18.3",
         "cors": "^2.8.5",
         "express": "^4.16.4",
+        "express-http-context": "^1.2.0",
         "express-winston": "^2.6.0",
         "helmet": "^3.15.0",
         "jsonwebtoken": "^8.4.0",
+        "lodash": "^4.17.11",
         "moment": "^2.23.0",
         "moment-timezone": "^0.5.23",
         "morgan": "^1.9.1",
         "mysql2": "^1.6.4",
+        "node-uuid": "^1.4.8",
         "sequelize": "^4.42.0",
+        "uuid": "^3.3.2",
         "validator": "^10.10.0",
         "winston": "^2.4.4",
         "winston-papertrail": "^1.0.5"
